--- a/src/styles/core/_footer.scss
+++ b/src/styles/core/_footer.scss
@@ -5,12 +5,21 @@
 }
 
 .footer-content {
-  @include flex();
-  padding-top: 20px;
-  margin: 0 auto;
-  @include media-breakpoint-down(sm) {
-    flex-direction: column;
-  }
+
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.footer-end {
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+
+  // .block-title {
+  //   text-align: start;
+  //   width: 100px;
+  // }
 }
 
 .footer-block {
@@ -22,6 +31,8 @@
   &:last-child {
     margin-right: 0;
   }
+
+
 
   @include media-breakpoint-down(sm) {
     text-align: center;
@@ -57,6 +68,7 @@
 
 .footer-social-item {
   text-align: center;
+
   span,
   a {
     display: inline-block;
@@ -71,12 +83,14 @@
     padding-bottom: 8px;
     margin: 0 auto;
     display: inline-block;
+
     @include media-breakpoint-down(sm) {
       margin: 0 4px;
     }
 
     a {
       margin-left: 10px;
+
       @include media-breakpoint-down(sm) {
         display: block;
         margin-left: 0px;
