--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,3 +12,26 @@
 
 // Import custom styles
 @import 'custom';
+
+.navigationBrand {
+    display: flex;
+    align-items: center;
+
+    img {
+        border-radius: 50%;
+    }
+}
+
+.homeArrivalProductList {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    // margin-top: 50px;
+
+}
+
+.h3NewArrival {
+    margin: 60px 50px 10px 60px;
+}
